fix(account-list): truncate long account name

--- a/ui/app/pages/permissions-connect/choose-account/index.scss
+++ b/ui/app/pages/permissions-connect/choose-account/index.scss
@@ -71,6 +71,7 @@
     display: flex;
     justify-content: flex-start;
     align-items: center;
+    min-width:0;
   }
 
   &__list-check-box {
@@ -111,11 +112,15 @@
       display: flex;
       flex-direction: column;
       margin-left: 16px;
+      min-width: 0;
     }
 
     &__label {
       @extend %content-text;
       color: $Black-100;
+      text-overflow: ellipsis;
+      overflow: hidden;
+      white-space: nowrap;
     }
 
     &__balance {
